<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login">

    <TextView
        android:id="@+id/LoginPage_tvTitle"
        android:text="@string/login_title"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/LoginPage_tvUsername"
        android:text="@string/login_username_input"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/LoginPage_tvTitle"/>
    <EditText
        android:id="@+id/LoginPage_etUsername"
        android:text=""
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/LoginPage_tvUsername"
        android:singleLine="true"
        android:background="@drawable/edit_text_default_background_border"/>
    <TextView
        android:id="@+id/LoginPage_tvPassword"
        android:text="@string/login_password_input"
        android:textSize="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/LoginPage_etUsername"/>
    <EditText
        android:id="@+id/LoginPage_etPassword"
        android:text=""
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/LoginPage_tvPassword"
        android:singleLine="true"
        android:background="@drawable/edit_text_default_background_border"/>
    <!-- Change to a checkbox -->
    <CheckBox
        android:id="@+id/LoginPage_ckbStayLoggedIn"
        android:text="@string/login_stay_logged_in"
        android:textSize="24dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/LoginPage_etPassword"/>

    <Button
        android:id="@+id/LoginPage_btnLogin"
        android:text="@string/login_login_button"
        android:textSize="24dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/LoginPage_ckbStayLoggedIn"/>
</androidx.constraintlayout.widget.ConstraintLayout>